--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 <div id="imagem_fundo">
     <h1 id="titulo">VIDA TERRESTRE</h1>
-    <p id="subtitulo">Preservar o meio ambiente é um ato importante não só para a humanidade, mas para todos os seres que habitam a Terra. Afinal, é nele que estão os recursos naturais necessários para a sua sobrevivência, como água, alimentos e matérias-primas. Sem esses recursos, todas as formas de vida do planeta poderão acabar. Ao longo da existência humana, muitos dos recursos naturais foram sendo degradados. Isso ocorreu por meio da queima de combustíveis fósseis; descarte de lixo e esgoto em rios e mares; crescimento desordenado das cidades; gestão hídrica inadequada; queima e destruição de matas e florestas, entre outros.</p>
+    <p id="subtitulo">Preservar o meio ambiente é um ato importante não só para a humanidade, mas para todos os seres que habitam a Terra. Afinal, é nele que estão os recursos naturais necessários para a sua sobrevivência, como água, alimentos e matérias-primas. Sem esses recursos, todas as formas de vida do planeta poderão acabar. Ao longo da existência humana, muitos dos recursos naturais foram sendo degradados.</p>
     <a id="acao" href="https://nacoesunidas.org/pos2015/agenda2030/" target="_blanck">Iniciar</a>
 </div>
 <h2>Projeto</h2>
